<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background">Background</string>
    <string name="search">Search</string>
    <string name="weather_image">Weather image</string>
    <string name="refresh">Refresh</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="settings">Settings</string>
    <string name="converter">Converter</string>
    <string name="wind_speed_in_km_h">Wind speed in km/h</string>
    <string name="wind_speed_in_m_c">Wind speed in m/c</string>
    <string name="pressure_in_mm">Pressure in mm</string>
    <string name="pressure_in_kpa">Pressure in kPa</string>
    <string name="equals" translatable="false">=</string>
    <string name="mm_hg" translatable="false">mmHg</string>
    <string name="pa" translatable="false">kPa</string>
    <string name="translate_button">Translate</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="splash_image">Splash image</string>
</resources>