<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/converter"
        android:orderInCategory="1"
        android:icon="@drawable/calculator"
        app:showAsAction="ifRoom"
        android:id="@+id/itmConv"
        />
    <item android:title="@string/settings"
        android:orderInCategory="2"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"
        android:id="@+id/itmSet"
        >
        <menu >
            <item android:title="@string/wind_speed_in_km_h"
                android:checkable="true"
                android:id="@+id/wind"

                />
            <item android:title="@string/pressure_in_mm"
                android:checkable="true"
                android:id="@+id/press"
                />
        </menu>
    </item>
</menu>