<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/translateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/translate_button"
        app:layout_constraintEnd_toEndOf="@+id/textEquals"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textEquals"
        app:layout_constraintTop_toBottomOf="@+id/textEquals"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLeft"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:endIconMode="clear_text"
        app:hintTextAppearance="@style/TextHint"
        app:layout_constraintBottom_toBottomOf="@+id/textEquals"
        app:layout_constraintEnd_toStartOf="@+id/textEquals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEquals">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mm_hg"
            android:inputType="numberDecimal"
            android:minWidth="120dp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/equals"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutRight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:endIconMode="clear_text"
        app:hintTextAppearance="@style/TextHint"
        app:layout_constraintBottom_toBottomOf="@+id/textEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textEquals"
        app:layout_constraintTop_toTopOf="@+id/textEquals">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pa"
            android:inputType="numberDecimal"
            android:minWidth="120dp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>